--- a/scheduler_gui/templates/index.html
+++ b/scheduler_gui/templates/index.html
@@ -29,7 +29,7 @@
 
     <h2>Last 10 visits</h2>
     {% for time in times %}
-    <p>{{ time }}</p>
+    <p>{{ time['timestamp'] }}</p>
     {% endfor %}
 
 </body>
